# Danaleo-3.0

./: ._gitignore  .gitignore  LICENSE  MANIFEST.in  README.md  gitignore  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css  theme.js
frontend/src/components/: ColumnDetails.jsx  DatasetPlotBuilder.jsx  DatasetTabs.jsx  MergeDatasetsModal.jsx  OverviewDashboard.jsx  PlotBuilder.jsx  SaveFileDialog.jsx  SavedPlots.jsx  SessionTree.jsx  Sidebar.jsx  Toast.jsx  UploadZone.jsx
scripts/: bootstrap_mac.sh  build_package.py  build_package.sh
src/danaleo/: __main__.py  cli.py  main.py
src/danaleo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/danaleo/core/: csv_ingestion.py  data_ingestion.py  exporter.py  operations.py  plots.py  session_store.py  stats.py
src/danaleo/server/: app.py  models.py
src/danaleo/server/static/: index.html
src/danaleo/server/static/assets/: index-B9Te0lI7.css  index-BqqQgDLw.js  index-CQoQ9213.js  index-Cm2wDaRI.js  index-CuIimjUK.js  index-DKSZqKUG.css  index-Dk8kYlo-.css  index-DvCRIUky.js
tests/: conftest.py  test_api.py  test_data_ingestion.py  test_exporter.py  test_frontend_regressions.py  test_main.py  test_models.py  test_notebook_multi_export.py  test_operations.py  test_packaging.py  test_plots.py  test_session_store.py  test_stats.py
