[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danaleo"
version = "3.0.0"
description = "Localhost interactive EDA workspace for CSV files"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Danaleo" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "nbformat>=5.10",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
danaleo = "danaleo.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
danaleo = ["server/static/**/*"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
