[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "danaleo"
version = "3.0.2"
description = "Explore, clean, transform, and visualize tabular data in your browser"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Danaleo" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["data-analysis", "data-visualization", "eda", "pandas", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "numpy>=1.26",
    "plotly>=5.22",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "nbformat>=5.10",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "odfpy>=1.4",
    "pyxlsb>=1.0",
    "pyarrow>=16.0",
    "tables>=3.9",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "twine>=5.1",
]

[project.scripts]
danaleo = "danaleo.cli:main"

[project.urls]
Homepage = "https://github.com/RP28/Danaleo-3.0"
Repository = "https://github.com/RP28/Danaleo-3.0"
Issues = "https://github.com/RP28/Danaleo-3.0/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
danaleo = ["server/static/**/*"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
